# lzero-reth

./: Cargo.toml  Dockerfile  README.md  funding.json
crates/engine/local/src/: miner.rs  service.rs
crates/engine/tree/src/tree/: mod.rs
crates/net/discv5/src/: config.rs
crates/net/network/src/: peers.rs
crates/net/network/src/test_utils/: testnet.rs
crates/net/network/src/transactions/: fetcher.rs  mod.rs  validation.rs
crates/optimism/node/src/: node.rs
crates/optimism/txpool/src/supervisor/: client.rs
crates/revm/: Cargo.toml
crates/revm/src/: database.rs  lib.rs  special_accounts.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: debug.rs  lib.rs
crates/rpc/rpc-eth-api/src/helpers/: block.rs  call.rs  estimate.rs  pending_block.rs
crates/rpc/rpc-eth-types/src/: gas_oracle.rs
crates/rpc/rpc/src/: debug.rs
crates/rpc/rpc/src/eth/: bundle.rs
crates/storage/provider/src/providers/: consistent.rs
crates/storage/provider/src/providers/database/: mod.rs  provider.rs
crates/storage/provider/src/providers/static_file/: manager.rs
crates/storage/provider/src/test_utils/: mock.rs
examples/custom-evm/: Cargo.toml
examples/custom-evm/src/: main.rs
examples/lzero-custom-state/: Cargo.toml
examples/lzero-custom-state/src/: main.rs
