[package]
name = "example-custom-evm"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-cli.workspace = true
reth-ethereum-cli.workspace = true
reth-cli-util.workspace = true
reth-chainspec.workspace = true
reth-evm-ethereum.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-primitives.workspace = true
reth-node-ethereum = { workspace = true, features = ["js-tracer", "test-utils"] }
reth-tracing.workspace = true
reth-node-builder.workspace = true
reth-provider.workspace = true
reth-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

eyre.workspace = true
tracing.workspace = true

clap = { workspace = true, features = ["derive", "env"] }
tokio = "1.42.0"
