[package]
name = "example-custom-evm"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm", "pool"] }
reth-tracing.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
tracing.workspace = true

clap = { workspace = true, features = ["derive", "env"] }
tokio = "1.42.0"
