[package]
name = "lzero-custom-reth"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-node-ethereum.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-evm-ethereum.workspace =  true
reth-chainspec.workspace = true
alloy-rpc-types-eth.workspace = true
clap = { workspace = true, features = ["derive"] }
futures-util.workspace = true
alloy-primitives.workspace = true
reth-primitives.workspace = true
alloy-eips.workspace = true
eyre.workspace = true
alloy-consensus.workspace = true
reth-trie.workspace = true
reth-storage-api.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true

[features]
default = ["std"]
std = [
    "reth-primitives/std",
    "reth-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "reth-chainspec/std"
]
