[package]
name = "lzero-custom-reth"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-node-ethereum.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-evm-ethereum.workspace =  true
reth-chainspec.workspace = true
clap = { workspace = true, features = ["derive"] }
alloy-primitives.workspace = true
reth-primitives.workspace = true
alloy-eips.workspace = true
eyre.workspace = true
alloy-consensus.workspace = true
reth-storage-api.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
tracing.workspace = true
reth-chain-state.workspace = true
reth-execution-types.workspace = true
reth-errors.workspace = true
